Revert " feat: use compact object headers"
This reverts commit 3d8f88aa677b2c1aa990fd4d9fea433fe7edd1b6.