@@ -22,7 +22,6 @@ graalvmNative {
 			buildArgs.add("--libc=musl")
 			buildArgs.add("--static")
 			buildArgs.add("-O3")
-			buildArgs.add("-XX:+UseCompactObjectHeaders")
 		}
 	}
 }
